2010-09-21  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Adam Roben.

        WebKit2 should look for WebKit2WebProcess.exe next to WebKit.dll
        https://bugs.webkit.org/show_bug.cgi?id=46209
        <rdar://problem/8445639>
        
        Find WebKit2WebProcess.exe by getting the full path to WebKit.dll, and then
        removing the last path component and replacing it with WebKit2WebProcess.exe.

        * UIProcess/Launcher/win/ProcessLauncherWin.cpp:
        (WebKit::ProcessLauncher::launchProcess):

2010-09-21  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam Roben.

        Send window visibility and window frame change sizes to the plug-in
        https://bugs.webkit.org/show_bug.cgi?id=46202

        * Shared/CoreIPCSupport/WebPageMessageKinds.h:
        * UIProcess/API/mac/WKView.mm:
        (-[WKView _updateWindowVisibility]):
        Call WebPageProxy::setWindowIsVisible.

        (-[WKView addWindowObserversForWindow:]):
        Add additional observers.

        (-[WKView removeWindowObservers]):
        Remove observers.

        (-[WKView _updateWindowFrame]):
        Call WebPageProxy::setWindowFrame.

        (-[WKView viewDidMoveToWindow]):
        Update the window visibility and the web frame.

        (-[WKView _windowDidMiniaturize:]):
        (-[WKView _windowDidDeminiaturize:]):
        Update the window visibility.

        (-[WKView _windowFrameDidChange:]):
        Update the window frame.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::setWindowIsVisible):
        (WebKit::WebPageProxy::setWindowFrame):
        Send messages along to the web process.

        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::PluginView):
        Register the plug-in view.

        (WebKit::PluginView::~PluginView):
        Unregister the plug-in view.

        (WebKit::PluginView::setWindowIsVisible):
        (WebKit::PluginView::setWindowFrame):
        Add empty stubs.
