@@ -1,3 +1,14 @@
+2010-09-21  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by John Sullivan.
+
+        Handle booleans in injected bundle messages
+        https://bugs.webkit.org/show_bug.cgi?id=46213
+
+        * Shared/UserMessageCoders.h:
+        (WebKit::UserMessageEncoder::baseEncode):
+        (WebKit::UserMessageDecoder::baseDecode):
+
 2010-09-21  Brian Weinstein  <bweinstein@apple.com>
 
         Reviewed by Adam Roben.
